Fix tooltip alignment.

--- a/src/resources/postcss/views/month/_multiday-event.pcss
+++ b/src/resources/postcss/views/month/_multiday-event.pcss
@@ -74,6 +74,10 @@
 		z-index: var(--z-index-multiday-event);
 	}
 
+	.tribe-events-calendar-month__multiday-event-hidden-link {
+		display: flex;
+	}
+
 	.tribe-events-calendar-month__multiday-event-bar {
 		background-color: var(--color-background);
 		overflow: hidden;
